Добавил просмотр\изменение клиента
Добавлен функционал просмотра\изменения клиента, нужно ещё доработать

--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -37,7 +37,8 @@
             android:maxLines="1"
             android:singleLine="true"
             android:inputType="number|numberSigned|numberDecimal"
-            android:digits="0123456789" />
+            android:digits="0123456789"
+            android:maxLength="16" />
 
     </android.support.design.widget.TextInputLayout>
 
