--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -28,7 +28,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:textColor="#FFF"
-                android:text="@string/button_save"/>
+                android:text="@string/button_edit"/>
 
         </android.support.v7.widget.Toolbar>
 
@@ -39,12 +39,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
-
+        android:orientation="vertical">
 
         <ScrollView
             android:id="@+id/client_form"
@@ -56,17 +51,10 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/photo"
-                    android:src="@drawable/photo_example"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_gravity="center_horizontal"
-                    android:contentDescription="@string/client_photo"/>
-
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_first_name">
 
                     <AutoCompleteTextView
                         android:id="@+id/first_name"
@@ -76,77 +64,113 @@
                         android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:maxLength="24" />
+                        android:enabled="false"
+                        android:textColor="#000000" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_last_name">
 
                     <AutoCompleteTextView
                         android:id="@+id/last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/client_last_name"
                         android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:maxLength="24" />
+                        android:enabled="false"
+                        android:textColor="#000000" />
 
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_middle_name">
 
                     <AutoCompleteTextView
                         android:id="@+id/middle_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/client_middle_name"
                         android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:maxLength="24" />
+                        android:enabled="false"
+                        android:textColor="#000000" />
 
                 </android.support.design.widget.TextInputLayout>
 
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_phone">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/phone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="phone"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:enabled="false"
+                        android:textColor="#000000" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/client_date">
+
+                    <EditText
+                        android:id="@+id/date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        android:enabled="false"
+                        android:textColor="#000000" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/transaction_flows"/>
+
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:paddingRight="@dimen/activity_horizontal_margin"
+                    android:id="@+id/listView"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <AutoCompleteTextView
-                        android:id="@+id/phone"
+                        android:id="@+id/balance"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/client_phone"
-                        android:inputType="phone"
+                        android:hint="@string/transaction_balance"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:maxLength="24" />
-
-                </android.support.design.widget.TextInputLayout>
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/client_date"
-                        android:inputType="date"
-                        android:maxLines="1"
-                        android:singleLine="true"
-                        android:maxLength="24" />
+                        android:enabled="false"
+                        android:textColor="#ff0000" />
 
                 </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
+
         </ScrollView>
+
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
