--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -59,11 +59,10 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/client_first_name">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/first_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/client_first_name"
                         android:inputType="textPersonName"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -77,7 +76,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/client_last_name">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/last_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -94,7 +93,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/client_middle_name">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/middle_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -112,7 +111,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/client_phone">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -129,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/client_date">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -157,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/transaction_balance">
 
-                    <AutoCompleteTextView
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/balance"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
