--- a/app/src/main/res/layout/dialog_transaction.xml
+++ b/app/src/main/res/layout/dialog_transaction.xml
@@ -27,13 +27,13 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:hint="@string/transaction_cost">
 
-        <AutoCompleteTextView
+        <android.support.design.widget.TextInputEditText
             android:id="@+id/cost"
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/transaction_cost"
             android:maxLines="1"
             android:singleLine="true"
             android:inputType="number|numberSigned|numberDecimal"
